<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bookNameTextInput"
            style="@style/BookInventoryTextInputStyle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bookNameEditText"
                style="@style/BookInventoryEditTextStyle"
                android:hint="@string/book_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bookPriceTextInput"
            style="@style/BookInventoryTextInputStyle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookNameTextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bookPriceEditText"
                style="@style/BookInventoryEditTextStyle"
                android:hint="@string/book_price"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bookQuantityTextInput"
            style="@style/BookInventoryTextInputStyle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookPriceTextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bookQuantityEditText"
                style="@style/BookInventoryEditTextStyle"
                android:hint="@string/book_quantity"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bookSupplierNameTextInput"
            style="@style/BookInventoryTextInputStyle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookQuantityTextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bookSupplierNameEditText"
                style="@style/BookInventoryEditTextStyle"
                android:hint="@string/book_supplier_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bookSupplierContactTextInput"
            style="@style/BookInventoryTextInputStyle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookSupplierNameTextInput">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bookSupplierContactEditText"
                style="@style/BookInventoryEditTextStyle"
                android:hint="@string/book_supplier_contact"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/addBookToInventoryButton"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/add_book_to_inventory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookSupplierContactTextInput" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>